--- a/index.html
+++ b/index.html
@@ -11,95 +11,106 @@
             <div class="card">
                     <h2 class="card-header">Payment form exemple</h2>
                 <div class="card-body"></div>
-                <div class="alert alert-danger" role="alert">
-                    <b> Some fields are missing</b>
-                </div>
-                <form>
-                    <div class="row">
-                        <div class="col-5">
-                            <div class="form-group">
-                                <label for="exampleFormControlInput1">Card #</label>
-                                <input type="text" placeholder="XXXXXXXXXXXXXXXXXXX" class="form-control">
-                            </div>
+                    <div class="m-3">
+                        <div class="alert alert-danger" role="alert">
+                            <h6> Some fields are missing</h6>
                         </div>
-                        <div class="col-3">
-                            <label for="exampleFormControlInput1">CVC #</label>
-                            <input type="text" placeholder="0000" class="form-control">
-                        </div>
-                        <div class="col-4">
-                            <label for="exampleFormControlInput1">Amount</label>
-                             <input type="text" placeholder="Amount" class="form-control">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="form-group">
-                                <label for="exampleFormControlInput1">First Name</label>
-                                <input type="text"class="form-control">
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <label for="exampleFormControlInput1">Last Name</label>
-                            <input type="text"class="form-control">
-                        </div>
-                    </div>
-                
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="exampleFormControlInput1">City</label>
-                                <input type="text"class="form-control">
-                            </div>
-                        </div>
-                            <div class="col-3">
-                                <label for="exampleFormControlSelect1">State</label>
-                            <select class="form-control"id="exampleFormControlSelect2">
-                                <option>Pick a State</option>
-                                <option>2</option>
-                            </select>
-                        </div>
-                        <div class="col-3">
-                            <label for="exampleFormControlInput1">Postal Code</label>
-                            <input type="text"class="form-control">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="bg-secondary">
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                                    <label class="form-check-label" for="inlineRadio1"><i class="fab fa-cc-mastercard"></i></label>
+                        <form>
+                            <div class="row">
+                                <div class="col-5">
+                                    <div class="form-group">
+                                        <label for="exampleFormControlInput1"><h6>Card #</h6></label>
+                                        <input type="text" placeholder="XXXXXXXXXXXXXXXXXXX" class="form-control">
+                                    </div>
                                 </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"  value="option2">
-                                    <label class="form-check-label" for="inlineRadio2"><i class="fab fa-cc-visa"></i></label>
+                                <div class="col-3">
+                                    <label for="exampleFormControlInput1"><h6>CVC #</h6></label>
+                                    <input type="text" placeholder="0000" class="form-control">
                                 </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
-                                    <label class="form-check-label" for="inlineRadio3"><i class="fab fa-cc-diners-club"></i></label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
-                                    <label class="form-check-label" for="inlineRadio3"><i class="fab fa-cc-amex"></i></label>
+                                <div class="col-4">
+                                    <label for="exampleFormControlInput1"><h6>Amount</h6></label>
+                                    <input type="text" placeholder="Amount" class="form-control">
                                 </div>
                             </div>
-                        </div>  
-                        <div class="col-3"></div>
-                        <div class="col-6">
-                            <div class="form-group">
-                                <label for="exampleFormControlTextarea1">Messege</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                                <small id="emailHelp" class="form-text text-muted">Add any notes here.<small>
-                            </div>
-                        </div>   
-                    </div>
-                    <div class="card">
-                            <div class="card-body"></div>
                         <div class="row">
-                            <div class="col-10"></div>
-                            <button type="button" class="btn btn-secondary">Cancel</button>
-                            <button type="button" class="btn btn-primary">Send</button>
+                            <div class="col-6">
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1"><h6>First Name</h6></label>
+                                    <input type="text"class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <label for="exampleFormControlInput1"><h6>Last Name</h6></label>
+                                <input type="text"class="form-control">
+                            </div>
                         </div>
+                    
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1"><h6>City</h6></label>
+                                    <input type="text"class="form-control">
+                                </div>
+                            </div>
+                                <div class="col-3">
+                                    <label for="exampleFormControlSelect1"><h6>State</h6></label>
+                                <select class="form-control"id="exampleFormControlSelect2">
+                                    <option>Pick a State</option>
+                                    <option>2</option>
+                                </select>
+                            </div>
+                            <div class="col-3">
+                                <label for="exampleFormControlInput1"><h6>Postal Code</h6></label>
+                                <input type="text"class="form-control">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3">
+                                <h6>We accept:</h6>
+                                <div class="bg-secondary">
+                                    <div class="m-3">
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                            <label class="form-check-label" for="inlineRadio1"><i class="fab fa-cc-mastercard"></i></label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"  value="option2">
+                                            <label class="form-check-label" for="inlineRadio2"><i class="fab fa-cc-visa"></i></label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                            <label class="form-check-label" for="inlineRadio3"><i class="fab fa-cc-diners-club"></i></label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+                                            <label class="form-check-label" for="inlineRadio3"><i class="fab fa-cc-amex"></i></label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>  
+                            <div class="col-3"></div>
+                                <div class="col-6">
+                                    <div class="form-group">
+                                        <label for="exampleFormControlTextarea1"><h6>Messege</h6></label>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                        <small id="emailHelp" class="form-text text-muted">Add any notes here.<small>
+                                    </div>
+                                </div>   
+                            </div>
+                        <div class="card">
+                            <div class="pt-lg-3">
+                                    <div class="card-body"></div>
+                                <div class="row">
+                                        <div class="col-10"></div>
+                                <div class="pt-lg-auto ">
+                                        <button type="button" class="btn btn-secondary">Cancel</button>
+                                    </div>
+                                    <div class="pl-sm-2">
+                                        <button type="button" class="btn btn-primary">Send</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>    
                     </div>    
                 </form>
             </div>    
