--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="card">
                     <h2 class="card-header">Payment form exemple</h2>
-                <div class="card-body"></div>
+                <!-- <div class="card-body"></div> -->
                     <div class="m-3">
                         <div class="alert alert-danger" role="alert">
                             <h6> Some fields are missing</h6>
@@ -97,20 +97,21 @@
                                     </div>
                                 </div>   
                             </div>
-                        <div class="card">
-                            <div class="pt-lg-3">
+                    <div class="card">
+                        <div class="p-1">
+                            <div class="mt-lg-3">
                                     <div class="card-body"></div>
                                 <div class="row">
                                         <div class="col-10"></div>
-                                <div class="pt-lg-auto ">
+                                    <div class="ml-sm-1">
                                         <button type="button" class="btn btn-secondary">Cancel</button>
                                     </div>
-                                    <div class="pl-sm-2">
+                                    <div class="ml-sm-2">
                                         <button type="button" class="btn btn-primary">Send</button>
                                     </div>
                                 </div>
                             </div>
-                        </div>    
+                        </div>
                     </div>    
                 </form>
             </div>    
