--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="bg-dark">
         <div class="container">
+            <div class="container-fluid">
             <div class="card">
                     <h2 class="card-header">Payment form exemple</h2>
                 <!-- <div class="card-body"></div> -->
@@ -67,8 +68,8 @@
                         <div class="row">
                             <div class="col-3">
                                 <h6>We accept:</h6>
-                                <div class="bg-secondary">
-                                    <div class="m-3">
+                                <div class="bg-secondary rounded">
+                                    <div class="m-2 p-2">
                                         <div class="form-check form-check-inline">
                                             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
                                             <label class="form-check-label" for="inlineRadio1"><i class="fab fa-cc-mastercard"></i></label>
@@ -96,25 +97,15 @@
                                         <small id="emailHelp" class="form-text text-muted">Add any notes here.<small>
                                     </div>
                                 </div>   
-                            </div>
-                    <div class="card">
-                        <div class="p-1">
-                            <div class="mt-lg-3">
-                                    <div class="card-body"></div>
-                                <div class="row">
-                                        <div class="col-10"></div>
-                                    <div class="ml-sm-1">
-                                        <button type="button" class="btn btn-secondary">Cancel</button>
-                                    </div>
-                                    <div class="ml-sm-2">
-                                        <button type="button" class="btn btn-primary">Send</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>    
-                </form>
-            </div>    
+                            </div>     
+                    </form> 
+                </div>    
+                <div class="text-right card-header mt-lg-2 border">
+                    <button type="button" class="btn btn-secondary">Cancel</button>
+                    <button type="button" class="btn btn-primary">Send</button>
+                </div>
+            </div>
+        </div>
         </div>
     <script src="https://kit.fontawesome.com/048e0a12a9.js" crossorigin="anonymous"></script>
 </body>    
